[project]
name = "vslam-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "plotly>=6.8.0",
    "scipy>=1.17.1",
]
